Add /shot endpoint
Add endpoint which make shots to battlefield.
Update docs and tests.
