# cmd/battleship/main.go
@@ -40,6 +40,7 @@ func main() {
 	router.HandleFunc("/create-matrix", bh.CreateBattleField).Methods("POST")
 	router.HandleFunc("/clear", bh.ClearBattleField).Methods("POST")
 	router.HandleFunc("/ship", bh.AddShips).Methods("POST")
+	router.HandleFunc("/shot", bh.Shot).Methods("POST")
 
 	log.Infof("listening at :8080")
 	log.Fatal(http.ListenAndServe(":8080", router))
